--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -106,6 +106,14 @@
   howpublished = {\url{http://www.robotc.net/}}
 }
 
+@MISC{MonoBrick,
+  author = {},
+  title = {{MonoBrick.DK | Home of MonoBrick}},
+  year = {},
+  note = {Seen 13/12/2016},
+  howpublished = {\url{http://www.monobrick.dk/}}
+}
+
 
 @MISC{Hugin,
   author = {},
