--- a/sections/Conclusion/Discussion.tex
+++ b/sections/Conclusion/Discussion.tex
@@ -134,7 +134,7 @@ refactoring should be a recurring event in our development strategy. Ideally, af
 As we have no control over the scheduling of the different threads on the NXT\ldots
 
 \section{Less Multithreading}
-
+During evaluation of the 
 
 (HINT: Track og GetDataAndCalculate bør ikke køre samtidigt. Den ene starter
   den anden, og holder den kun åben i et tidsinterval.)
