--- a/sections/Conclusion/Discussion.tex
+++ b/sections/Conclusion/Discussion.tex
@@ -128,7 +128,28 @@ from the NXT which all 3 was not able to succed in doing that.
 As a group we decided to use an agile software engineering paradigm. This means that
 refactoring should be a recurring event in our development strategy. Ideally, after each iteration, the code should be refactored. Although we did refactor our code from time to time, there was no schedule to it at all, resulting in a lack of refactoring. What we should have done is dedicate a team to refactor the code after each iteration, ensuring that the refactoring occurs regularly. This would also be more in line with the Unified Process way of thinking, making the refactoring part of the development process, instead of just doing it when feel it is necessary.
 
-\section{Put more thought into picking an OS/Firmware, language to write in}
+\section{Programming language}
+For programming the NXT we went with the C-like language NXC, if however we were
+to make a similar project it would be beneficial to choose another language
+along with better firmware. This would be the case since the NXC language is not
+that well documented and we did not experience that big of a community behind
+the language. This meant that finding solutions to weird issues was not that
+easy. Therefore, choosing another language as for example LeJos, which has
+better documentation and better functionality. \nl
+
+LeJos also has the advantage of being object oriented, which is highly
+advantageous when several persons are working on the same program. Furthermore,
+the ability to create objects gives the option to divide the responsibilities of
+different methods.\nl
+
+Another issue with using NXC was we did not have access to a debugger, this
+would not be a problem when using LeJos which can be run in the JVM on the
+computer. The only problem with doing it like this is the ability to get sensor
+input and send outputs to the motors. Thus, this part would still have been run
+on the NXT itself, which is not that big of an issue.\\
+To conclude using a different programming language along with different firmware
+could have helped us in developing the program along with having better
+opportunities for involving all the group members in the process.
 
 \section{Scheduling}
 As we have no control over the scheduling of the different threads on the NXT\ldots
