--- a/sections/appAname.tex
+++ b/sections/appAname.tex
@@ -2,4 +2,5 @@
 \input{sections/Appendix/Physics/FlourTestJones}
 \input{sections/Testing/AngleTest.tex}
 \input{sections/Testing/Speedtest.tex}
+\input{sections/Appendix/MI/MIData.tex}
 % \input{sections/Testing/Testing.tex}
