--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -22,26 +22,30 @@ Most of the domains are easy to determine, for instance the domains for each of
 the sensors are determined by what they can output. As such the domain for
 distance has values between 0 and 255, as this is what the ultrasound sensor
 can sense. The domain for the vectors was determined by gathering data about the
-vectors and sensor observations by outputting the observed values. This data is
-not only used to determine the domain for the vectors, it is also used to
-determine the probability tables.\nl
+vectors and sensor observations by outputting the observed values, see
+\autoref{AppendixMIData}. This data is used to construct the
+probability tables by constructing the vectors between each of the
+observations. These vectors are then used to construct the domain for vectors by creating an average vector for
+the target at moving at 60\%, 80\% and when the observations are deemed flawed.
+These vectors are then used in conjuction with observations themselves to create
+the probability table.\nl
+
 
 \fix{}{tables need to be updated to better illustrate the possibility of bad
 observations}
 
 The domain for distance is divided into 5 intervals, with the first and the last
 intervals being the biggest. This ensures that we can have improved precision
-for the remaining 3 intervals. The probability for each of the intervals were
-determined by the results of the tests, see \fix{}{insert ref to tests}. As such
-the probability table for \texttt{SD\_0} and \texttt{SD\_2} can be seen in see
-\autoref{SDtable}.
+for the remaining 3 intervals. As such the probability table for \texttt{SD\_0}
+and \texttt{SD\_2} can be seen in see \autoref{SDtable}.
 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l|l|l|l|}
 \hline
 \multicolumn{4}{|l|}{P(SD\_0|Vector\_1)} \\ \hline
-Vector\_0     & (0.028; -0.013) & (-0.005; -0.028) & (0.028,-0.028)  \\\hline   
+Vector\_0     & (0.033; -0.029)-80\% & (0.012; -0.014)-Bad observations &
+(0.020,-0.018)-60\% \\\hline 
 [0 - 60]      & 0    & 0    & 0.11 \\ \hline 
 [60 - 75]    & 0.33 & 0.33 & 0.44 \\ \hline
 [75 - 90]   & 0.33 & 0.33 & 0.22 \\ \hline
@@ -94,12 +98,13 @@ the probability for \texttt{SA\_0} and \texttt{SA\_2}.
 \begin{tabular}{|l|l|l|l|}
 \hline
 \multicolumn{4}{|l|}{P(SA\_0|Vector\_1)} \\ \hline
-Vector\_0     & (0.028; -0.013) & (-0.005; -0.028) & (0.028,-0.028)  \\\hline   
-[-30 - 0]   & 0.78 & 0    & 0.28    \\ \hline 
-[0 - 30]    & 0.22 & 0    & 0.33    \\ \hline
-[30 - 60]   & 0    & 0    & 0.39    \\ \hline
-[60 - 90]   & 0    & 0    & 0    \\ \hline
-[90- 330]   & 0    & 0    & 0    \\ \hline
+Vector\_0     & (0.033; -0.029)-80\% & (0.012; -0.014)-Bad observations &
+(0.020,-0.018)-60\% \\\hline 
+[-30 - 0]   & 5/22 = 0.23 & 0    & 3/20 = 0.15   \\ \hline 
+[0 - 30]    & 8/22 = 0.36 & 8/30 = 0.27 & 9/20 = 0.45 \\ \hline
+[30 - 60]   & 8/22 = 0.36 & 10/30 = 0.33 & 8/20 = 0.40 \\ \hline
+[60 - 90]   & 1/22 = 5 & 5/30 = 0.17 & 0    \\ \hline
+[90- 330]   & 0    & 7/30 = 0.23   & 0    \\ \hline
 \end{tabular}
 \caption{The probability table for sensing the angle given the vector}
 \end{table}
