--- a/sections/Appendix/MI/MIData.tex
+++ b/sections/Appendix/MI/MIData.tex
@@ -1,5 +1,6 @@
 \chapter{MI Data}\label{AppendixMIData}
-\begin{minipage}[H]{\linewidth}
-\dataTable{MIData60}{The Data from where the target has a speed of 60\%}{Data60}
-\end{minipage}
-
+Below can the data which are used in the design of the model.\nl
+\dataTable{MIData60}{The data from where the target has a speed of
+60\%}{Data60}
+\dataTable{MIData80}{The data from where the target has a speed of
+80\%}{Data80}
