--- a/sections/Conclusion/Discussion.tex
+++ b/sections/Conclusion/Discussion.tex
@@ -55,7 +55,7 @@ As discussed above in \autoref{DSQ}, the quality of the received data was not
 satisfactory, which has led to problems with gathering the required information
 in order to calculate the targets future position. The current implementation of
 the \name software requires the turret to observe the target at at least 2
-different points, but preferrably at a much higher amount.\nl
+different points, but preferrably at a much higher amount.
 The fact that we have only two points to calculate the future position from,
 creates a lot of problems when it comes to drawing an accurate conclusion. This
 is because two points results in only a single speed and directional vector, on
@@ -72,17 +72,17 @@ to the poor quality of the sensors, but it is possible that the current
 implementation could be optimized to work under these conditions. In the current
 implementation, the ultrasonic sensors are the limiting factor when it comes to
 gathering data, as a data point can only be made when the sensor observes the
-target.\nl
-A problem with the implementation could be that the distance sensors are only
+target.
+A problem with this implementation could be that the distance sensors are only
 activated once the camera returns information about the target being in its
 vision. Considering that we have no control over the scheduling of the NXT, it
 could be possible that this dependency between the two sensors causes the
 distance sensor to somtimes miss its window of opportunity to observe the
-target.\nl
+target.
 In an alternate implementation, we could try a solution where the distance
 sensors are always on, such that the commands to turn them on/off would not
 interfere with its ability to locate the target in time. In this implementation,
-we could simple sort the data such that only the useful data is saved, while
+we could simply sort the data such that only the useful data is saved, while
 circumventing the possible problems of scheduling the on/off commands to the
 sensors.
 
@@ -162,6 +162,3 @@ During evaluation of the
 
 (HINT: Track og GetDataAndCalculate bør ikke køre samtidigt. Den ene starter
   den anden, og holder den kun åben i et tidsinterval.)
-
-\section{Real camera and custom software}
-(HINT: Rigtigt kamera med vores egen software.)
