--- a/sections/Conclusion/Discussion.tex
+++ b/sections/Conclusion/Discussion.tex
@@ -127,9 +127,16 @@ understanding and implementation of MonoBrick, to establish a connection to the
 NXT mailbox. While we succeded in writing data from a PC to the NXT, we were
 unable to read data from the NXT.
 
-\section{Should have refactored the code}
-As a group we decided to use an agile software engineering paradigm. This means that
-refactoring should be a recurring event in our development strategy. Ideally, after each iteration, the code should be refactored. Although we did refactor our code from time to time, there was no schedule to it at all, resulting in a lack of refactoring. What we should have done is dedicate a team to refactor the code after each iteration, ensuring that the refactoring occurs regularly. This would also be more in line with the Unified Process way of thinking, making the refactoring part of the development process, instead of just doing it when feel it is necessary.
+\section{Code Refactoring}
+As a group we decided to use an agile software engineering paradigm. This means
+that refactoring should be a recurring event in our development strategy.
+Ideally, after each iteration, the code should be refactored. Although we did
+refactor our code from time to time, there was no schedule to it at all,
+resulting in a lack of refactoring. What we should have done is dedicate a team
+to refactor the code after each iteration, ensuring that the refactoring occurs
+regularly. This would also be more in line with the Unified Process way of
+thinking, making the refactoring part of the development process, instead of
+just doing it when feel it is necessary.
 
 \section{Programming language}
 For programming the NXT we went with the C-like language NXC, if however we were
@@ -153,9 +160,6 @@ on the NXT itself, which is not that big of an issue.\\
 To conclude using a different programming language along with different firmware
 could have helped us in developing the program along with having better
 opportunities for involving all the group members in the process.
-
-\section{Scheduling}
-As we have no control over the scheduling of the different threads on the NXT\ldots
 
 \section{Less Multithreading}
 During evaluation of the 
