--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -46,8 +46,8 @@ and \texttt{SD\_2} can be seen in see \autoref{SDtable}.
 \multicolumn{4}{|l|}{P(SD\_0|Vector\_1)} \\ \hline
 Vector\_0     & (0.033; -0.029)-80\% & (0.012; -0.014)-Bad observations &
 (0.020,-0.018)-60\% \\\hline 
-[0 - 60]      & 0    & 0    & 0.11 \\ \hline 
-[60 - 75]    & 0.33 & 0.33 & 0.44 \\ \hline
+[0 - 60]      & 3/22 = 0.14    & 0    & 0.11 \\ \hline 
+[60 - 75]    & 9/22 = 0.41 & 0.33 & 0.44 \\ \hline
 [75 - 90]   & 0.33 & 0.33 & 0.22 \\ \hline
 [90 - 105]   & 0    & 0.11 & 0.17 \\ \hline
 [105 - 255]   & 0.34 & 0.23 & 0.06   \\ \hline
