--- a/sections/Conclusion/Discussion.tex
+++ b/sections/Conclusion/Discussion.tex
@@ -175,17 +175,23 @@ own scheduler.
 
 
 \section{Less Multithreading}
-During evaluation of the final software that have been developed two different
-task (\textc{Track} and \textc{GetDataAndCalculate}) the should be running
-both at the same time for as long as the program itself is running. The problem
-with this implementation is that \textc{GetDataAndCalculate} is buzy waiting while it waits for the camera to
-tell it to collect data from the ultrasonic sensors. The problem is the buzy
-waiting, if it was implemented using mutexs where the task whould sleep if
-another task has takken that mutex, another solution whould be to only have one
-task \textc{Track} which is running for as long as the program is running and
-the, while it whould then start a task called \textc{GetData} which whould only
-collect one set of data, without stopping the tracking, then when it has enough
-data it will start the calculate task such that we will shoot at the target.\nl
+During evaluation of the final software implementation, we noticed a potential
+problem with the way our two main tasks \textc{Track} and
+\textc{GetDataAndCalculate} are interleaved. In the current implementation, both
+of these tasks are set to always be running concurrently, and as such, they
+both have to be scheduled, even when \textc{GetDataAndCalculate} is simply doing
+busy wait, while it is waiting for a signal from \textc{Track}.\nl
 
-One aspect which would be better is that the NXT is not using as much of its cpu
-time on buzy waiting.
+This problem could have been solved by implementing the use of mutexes in order
+to set one task to sleep while it waits for the other to finish. An alternate
+solution whould be to have \textc{Track} running for the entirety of the program
+execution, and then when it observed the target, it would start another task
+called \textc{GetData}, which whould only collect one set of data. This would
+allow the gathering of data to complete without stopping the tracking. When it
+has enough data it will start the \textc{GetDataAndCalculate} task, such that
+the turret will calculate the future position and shoot at the target.\nl
+
+While we are uncertain that this is a real problem, we can conclude that having
+a task busy-wait will take up some amount of processing resources. As this is
+the case, if the \name software were to be developed further, this would
+definitely be changed.
