--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -16,6 +16,8 @@ nodes with a continuous set of values, we can consider additional variables,
 which can  make up for the loss of accuracy. It also allows us group the values
 that seem unlikely to be used often into big intervals.
 
+\fix{}{explain possible issues with 0 probabilities}
+
 \subsection{Constructing the Probability Tables}
 
 Most of the domains are easy to determine, for instance the domains for each of
@@ -46,11 +48,11 @@ and \texttt{SD\_2} can be seen in see \autoref{SDtable}.
 \multicolumn{4}{|l|}{P(SD\_0|Vector\_1)} \\ \hline
 Vector\_0     & (0.033; -0.029)-80\% & (0.012; -0.014)-Bad observations &
 (0.020,-0.018)-60\% \\\hline 
-[0 - 60]      & 3/22 = 0.14    & 0    & 0.11 \\ \hline 
-[60 - 75]    & 9/22 = 0.41 & 0.33 & 0.44 \\ \hline
-[75 - 90]   & 0.33 & 0.33 & 0.22 \\ \hline
-[90 - 105]   & 0    & 0.11 & 0.17 \\ \hline
-[105 - 255]   & 0.34 & 0.23 & 0.06   \\ \hline
+[0 - 60]      & 3/22 = 0.14 & 3/27 = 0.11 & 0 \\ \hline 
+[60 - 75]    & 9/22 = 0.41 & 12/27 = 0.44 & 14/24 = 0.58 \\ \hline
+[75 - 90]   & 5/22 = 0.23 & 8/27 = 0.30 & 6/24 = 0.25 \\ \hline
+[90 - 105]   & 4/22 = 0.18 & 1/27 = 0.04 & 3/24 = 0.13 \\ \hline
+[105 - 255]   & 1/22 =0.04 & 3/22 = 0.11 & 1/24 = 0.04   \\ \hline
 \end{tabular}
 \caption{The probability table for sensing the distance given the vector.}
 \label{SDtable}
@@ -66,14 +68,20 @@ both \texttt{Vector\_1} and \texttt{Vector\_2}, this can be seen in
 \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|}
 \hline
 \multicolumn{10}{|l|}{P(SD\_1|Vector\_1, Vector\_2)} \\\hline 
-Vector\_2 & \multicolumn{3}{l|}{} & \multicolumn{3}{l|}{} &
-\multicolumn{3}{l|}{}\\\hline 
- &       &       &       &       &       &       &       &       &       \\
-\hline &       &       &       &       &       &       &       &       &       \\ \hline
- &       &       &       &       &       &       &       &       &       \\ \hline
- &       &       &       &       &       &       &       &       &       \\ \hline
- &       &       &       &       &       &       &       &       &       \\ \hline
- &       &       &       &       &       &       &       &       &       \\ \hline
+Vector\_2 & \multicolumn{3}{l|}{80} & \multicolumn{3}{l|}{Bad} &
+\multicolumn{3}{l|}{60}\\\hline 
+Vector\_1 & 80\%      &  Bad     & 60\%      & 80\%      & Bad      & 60\%     
+& 80\% & Bad & 60\% \\\hline
+[0-60]&1/12 = 0.08 & 1/3 = 0.33 & 0      & 2/12 = 0.17 & 1/6 = 0.17 & 0 & 0  
+& 0 & 0 \\ \hline
+[60-75]&4/12 = 0.33 & 1/3 = 0.33 & 1      & 7/12 = 0.58 & 3/6 = 0.5 & 0      & 1     
+& 7/15 = 0.47 & 5/9 = 0.56\\ \hline
+[75-90] & 4/12 = 0.33 & 0 & 0 & 2/12 = 0.17 & 1/6 = 0.17 & 2/3 = 0.67 & 0 
+& 5/15 = 0.33 &1/9 = 0.11\\\hline
+[90-105] & 2/12 = 0.17 & 1/3 = 0.33 & 0 & 1/12 = 0.08 & 0 & 0 & 0 
+& 2/15 = 0.07  & 3/9 = 0.33\\\hline
+[105-255] & 1/12 = 0.08 & 0 & 0 & 0 & 1/6 = 0.17 & 1/3 = 0.33 & 0 & 1/15 = 0.07     
+&0\\\hline
 \end{tabular}
 \caption{The probability table for sensing the distance given two vectors.}
 \label{SDtable2}
