--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -189,9 +189,9 @@ need to  be updated} see \autoref{Vector0_table}.
 \begin{tabular}{|l|l|}
 \hline
 P(Vector\_1) &\\ \hline
-(0.028; -0.013) & 0.25   \\ \hline 
-(-0.005; -0.028) & 0.25  \\ \hline
-(0.028,-0.028)   & 0.50  \\ \hline
+(0.033; -0.029) & 0.39   \\ \hline 
+(0.012; -0.014) & 0.21  \\ \hline
+(60\%)   & 0.39  \\ \hline
 \end{tabular}
 \caption{The probability table for a vector\_1}
 \end{table}
@@ -205,10 +205,12 @@ probability table: \fix{}{needs to be updated}
 \begin{tabular}{|l|l|l|l|}
 \hline
 \multicolumn{4}{|l|}{P(SA\_0|Vector\_1)} \\ \hline
-Vector\_0     & (0.028; -0.013) & (-0.005; -0.028) & (0.028,-0.028)  \\\hline   
-(0.028; -0.013)   & 0 & 0    & 0    \\ \hline 
-(-0.005; -0.028)    & 0 & 0    & 0    \\ \hline
-(0.028,-0.028)   & 0    & 0    & 0   \\ \hline
+Vector\_0     & (0.033; -0.029) 80\% & (0.012; -0.014) Bad observation & 60\%  \\\hline 
+(-30:0)   & 0.23 & 0    & 0    \\ \hline 
+(0; 30)    & 0.36 & 0.27 & 0.15    \\ \hline
+(30,60)   & 0.36    & 0.33 & 0.45   \\ \hline
+(60:90)   & 0.045	& 0.17 & 0.4 	\\ \hline
+(90:330)  & 0	& 	0.23		& 0 		\\ \hline
 \end{tabular}
 \caption{The probability table for sensing the angle given the vector}
 \end{table}
