--- a/sections/Appendix/Physics/FlourTestJones.tex
+++ b/sections/Appendix/Physics/FlourTestJones.tex
@@ -1,4 +1,4 @@
-\chapter{Accuracy Test}\label{AppendixAccTest}
+\chapter{Hit-Accuracy Test}\label{AppendixAccTest}
 After developing the design for the turret, a test was made in order to
 determine how accurate the turret could shoot at a target location. That is,
 given a number of shots at the same location, what is the chance that the turret
