--- a/sections/Implementation/MIImplementation/ImplBN.tex
+++ b/sections/Implementation/MIImplementation/ImplBN.tex
@@ -1,4 +1,4 @@
-\chapter{Implementing a Belief Network}
+\chapter{Implementation of a Belief Network}
 This chapter will be used to describe how the belief network could be
 implemented. There will also be a discussion of the pros and cons compared to
 the different solutions.
