--- a/sections/Implementation/Implementation.tex
+++ b/sections/Implementation/Implementation.tex
@@ -1,4 +1,4 @@
-\chapter{Implementation}\label{ImplLabel}
+\chapter{Software Implementation}\label{ImplLabel}
 Following the turret design in \autoref{MechDesign} this chapter will be used to present and
 describe the final implementation of the software used in the \name turret. This will be done
 by looking at the main system components and the three main program threads:
