--- a/sections/Testing/AngleTest.tex
+++ b/sections/Testing/AngleTest.tex
@@ -4,7 +4,7 @@ target, namely the angle of firing. Due to the importance of being able to
 precisely set the angle of firing, tests have been made to ensure that the
 turrets accuracy is within an acceptable margain of error.
 
-\subsection{Test Setup}
+\section{Test Setup}
 The setup for this test was to use a protractor to measure the angle of the
 turret in relation to the horizontal. In order to have a stable and
 consistant position to measure the angle from, a lego structure was added to the
@@ -22,7 +22,7 @@ test has the turret set the angle of firing without retracting to the resting
 position before the next test. For these tests the resting position is measured
 to be 5 degrees.
 
-\subsection{Results: Resting Position}
+\section{Results: Resting Position}
 This test had the turret retract to its resting position before setting the
 specified angle of fire. The data presented below in
 \autoref{table:AngleTest1Result} is the average of five repetitions.
@@ -33,7 +33,7 @@ tests.}{AngleTest1Result}
 From these data we can determine that the maximum difference in angles is 3
 degrees.  
 
-\subsection{Results: Dynamic Position}
+\section{Results: Dynamic Position}
 This test had the turret set the angle as an offset based on the previously set
 angle. This means that the turret is not reset to its resting position between
 tests. This is done in order to determine the turrets ability to dynamically and
@@ -45,7 +45,7 @@ accurately set its angle of fire. The data presented below in
 From these data we can determine that the maximum difference in angles is 2
 degrees, which is slightly more accurate than the previous test.
 
-\subsection{Conclusion: Angle Test}
+\section{Conclusion: Angle Test}
 From the 10 tests we can conclude that the turret capabilities when it comes to
 setting the correct angle are satisfactory. While there is a difference of up to
 3 degrees between the expected and actual angle, we conclude that this is well
