--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -118,10 +118,13 @@ The probability table for \texttt{SA\_1} is given as:
 
 \begin{table}[H]
 \centering
-\begin{tabular}[|c|c|c|c|c|c|c|c|c|c|]
-Vector_1&\multicolumn{3}{|c|}{(0.033;-0.029)}\multicolumn{3}{|c|}{(0.012;-0.014)}\multicolumn{3}{|c|}{60\%}\\
+%{|l|l|l|l|l|l|l|l|l|l|}
+\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|}
 \hline
-Vector_2 & (0.033;-0.029) 80\% & (0.012;-0.014) Bad & 60\% &(0.033;-0.029) 80\%
+\multicolumn{10}{|l|}{P(SA\_1|Vector\_1, Vector\_2)} \\\hline 
+Vector\_2 & \multicolumn{3}{l|}{80} & \multicolumn{3}{l|}{Bad} &
+\multicolumn{3}{l|}{60}\\\hline 
+Vector\_2 & (0.033;-0.029) 80\% & (0.012;-0.014) Bad & 60\% &(0.033;-0.029) 80\%
 & (0.012;0.014) Bad & 60\% & (0.033;0.029) 80\% & (0.012;-0.014) Bad & 60\% \\
 \hline
 [-30 - 0] & 5/12 =  & 0/3 = & 0/1 = & 0/12 = & 0/6 = & 0/3 = & 0/1 = & 0/15 = &
