--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -197,13 +197,26 @@ P(Vector\_1) &\\ \hline
 (0.012; -0.014) & 7/33 = 0.22  \\ \hline
 (60\%)   & 13/33 = 0.39  \\ \hline
 \end{tabular}
-\caption{The probability table for a vector\_1}
+\caption{The probability table for a Vector\_1}
 \end{table}
 \end{center}
 
 The probability for \texttt{Vector\_2} is given as the following conditional
 probability table: \fix{}{needs to be updated}
 
+\begin{table}[]
+\centering
+\label{vector2tab}
+\begin{tabular}{|l|l|l|l|}
+\hline
+\multicolumn{4}{|l|}{P(Vector\_2|Vector\_1)} \\ \hline
+ Vector\_1 & 80    & bad    & 60    \\ \hline
+ 80    & 4/8 = 0.5    & 1/8 = 0.13    & 0    \\ \hline
+ bad   & 4/8 = 0.5    & 2/8 = 0.25    & 1/4 = 0.25  \\ \hline
+ 60    & 0            & 5/8 = 0.62    & 3/4 = 0.75  \\ \hline
+\end{tabular}
+\caption{The conditional probability table of Vector\_2 given Vector\_1}
+\end{table}
 
 
 % \begin{center}
