--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -127,16 +127,16 @@ Vector\_2 & \multicolumn{3}{l|}{80} & \multicolumn{3}{l|}{Bad} &
 Vector\_2 & (0.033;-0.029) 80\% & (0.012;-0.014) Bad & 60\% &(0.033;-0.029) 80\%
 & (0.012;0.014) Bad & 60\% & (0.033;0.029) 80\% & (0.012;-0.014) Bad & 60\% \\
 \hline
-[-30 - 0] & 5/12 =  & 0/3 = & 0/1 = & 0/12 = & 0/6 = & 0/3 = & 0/1 = & 0/15 = &
-0/9 = \\ \hline
-[0 - 30] & 3/12 = & 2/3 = & 1/1 = 1 & 4/12 = & 0/6 = & 0/3 = & 0/1 = & 6/15 = &
-2/9 = \\ \hline
-[30 - 60] & 4/12 = & 1/3 = & 0/1 = & 6/12 = & 2/6 = & 1/3 = & 1/1 = 1 & 7/15 = &
-4/9 = \\ \hline
-[60 - 90] & 0/12 = & 0/3 = & 0/1 = & 1/12 = & 0/6 = & 2/3 = & 0/1 = & 2/15 = &
-3/9 = \\ \hline
-[90 - 330] & 0/12 = & 0/3 = & 0/1 = & 1/12 = & 4/6 = & 0/3 = & 0/1 = & 0/15 =
-0/9 = \\ \hline
+[-30 - 0] & 5/12 = 0.42  & 0/3 = 0 & 0/1 = 0 & 0/12 = 0 & 0/6 = 0 & 0/3 = 0 &
+0/1 = 0 & 0/15 = 0 & 0/9 = 0 \\ \hline
+[0 - 30] & 3/12 = 0.25 & 2/3 = 0.67 & 1/1 = 1 & 4/12 = 0.33 & 0/6 = 0 & 0/3 = 0
+& 0/1 = 0 & 6/15 = 0.4 & 2/9 = 0.22 \\ \hline
+[30 - 60] & 4/12 = 0.33 & 1/3 = 0.33 & 0/1 = 0 & 6/12 = 0.5 & 2/6 = 0.33 & 1/3 =
+0.33 & 1/1 = 1 & 7/15 = 0.47 & 4/9 = 0.44 \\ \hline
+[60 - 90] & 0/12 = 0 & 0/3 = 0 & 0/1 = 0 & 1/12 = 0.08 & 0/6 = 0 & 2/3 = 0.67 &
+0/1 = 0 & 2/15 = 0.13 & 3/9 = 0.33 \\ \hline
+[90 - 330] & 0/12 = 0 & 0/3 = 0 & 0/1 = 0 & 1/12 = 0.08 & 4/6 = 0.67 & 0/3 = 0 &
+0/1 = 0 & 0/15 = 0 & 0/9 = 0 \\ \hline
 \end{tabular}
 \caption{The probability table for sensing the angle given two vectors.}
 \label{SDtable2}
