--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -184,8 +184,8 @@ vectors are found by taking the average of the vectors which are clumped
 together. Three different vectors are found, an average for the target going at
 80\%, an average 60\% and finally a vector that is faulty.
 
-\fix{This means that the vectors domain consist of 3 values,}{might
-need to  be updated} see \autoref{Vector0_table}. 
+This means that the vectors domain consist of 3 values, a vector for moving
+at 80\%, 60\% and a bad vector, see \autoref{Vector0_table}.
 
 \begin{center}
 \begin{table}[H]
@@ -202,8 +202,7 @@ P(Vector\_1) &\\ \hline
 \end{center}
 
 The probability for \texttt{Vector\_2} is given as the following conditional
-probability table: \fix{}{needs to be updated}
-
+probability table: 
 \begin{table}[]
 \centering
 \label{vector2tab}
